--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -24,13 +24,16 @@
     <string name="notifRace" formatted="false">A corrida está a começar</string>
     <string name="notifRaceToday" formatted="false">Corrida hoje</string>
 
+    <string name="setNotificatioForSeries">Definir notificações para a série</string>
     <string name="setSingleAlarm">Definir notificação</string>
     <string name="removeSingleAlarm">Remover notificação</string>
     <string name="setMultiAlarm" formatted="false">Definir notificação C%d</string>
     <string name="removeMultiAlarm" formatted="false">Remover notificação C%d</string>
 
     <string name="alarmSet">Nova notificação definida</string>
+    <string name="alarmsSet">Novas notificações definida</string>
     <string name="alarmNotSet">Não foi possível definir a notificação</string>
+    <string name="alarmsNotSet">Não foi possível definir algumas notificações</string>
     <string name="alarmNotUpdated">Não foi possível atualizar a notificação</string>
     <string name="raceToday">Data de início hoje</string>
     <string name="alarmInPast">Data de início passada</string>
