--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,13 +23,16 @@
     <string name="notifRace" formatted="false">Green flag</string>
     <string name="notifRaceToday" formatted="false">Race is today</string>
 
+    <string name="setNotificatioForSeries">Set notifications for series</string>
     <string name="setSingleAlarm">Set notification</string>
     <string name="removeSingleAlarm">Remove notification</string>
     <string name="setMultiAlarm" formatted="false">Set R%d notification</string>
     <string name="removeMultiAlarm" formatted="false">Remove R%d notification</string>
 
     <string name="alarmSet">Notification set</string>
+    <string name="alarmsSet">Notifications set</string>
     <string name="alarmNotSet">Error setting notification</string>
+    <string name="alarmsNotSet">Error setting some notifications</string>
     <string name="alarmNotUpdated">Error updating notification</string>
     <string name="raceToday">Start date is today</string>
     <string name="alarmInPast">Start date is in the past</string>
