Add alternate layout basic functionality

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -84,4 +84,6 @@
     <string name="upgradePro">Remover publicidade</string>
 
     <string name="notification_channel_race_starting">Início de corridas</string>
+    <string name="settinns_layout">Layout</string>
+    <string name="settings_activate_mini_layout">Mini Layout</string>
 </resources>
