--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,8 +78,6 @@
     <string name="poweredby" translatable="false">Powered by</string>
     <string name="errorLoadingStandings">The requested results are not available yet. Please try again later.</string>
 
-    <string name="releaseNotesMsg">
-        .Further increases standings/results coverage.\n.Tweaks the user interface.\n.Improves app reliability.\n.Adds support for Android 8.0 Oreo.</string>
 
     <string name="noInternetConnection">No internet connection. Please make sure you\'re connected and try again.</string>
     <string name="notInternetFirstInit">No internet connection. For the first initialization you must have an active connection. Please make sure you\'re connected and try again.</string>
@@ -92,4 +90,6 @@
     <string name="inWeeks" formatted="false">In %d weeks</string>
 
 
+    <string name="releaseNotesMsg">
+        .Adds new optional layout (Can be activated in Settings menu).\n.Adds the ability to set notifications for an entire series.\n.Further increases standings/results coverage.\n.Improves app reliability.\n.Adds support for Android 8.0 Oreo.</string>
 </resources>
