--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="exportToCalendar">Export to calendar</string>
     <string name="raceExported">Race exported</string>
     <string name="exportRaceTo">Export event to</string>
+    <string name="noCalendarsAvailable">You don\'t have any external calendars. Add one and try again.</string>
 </resources>
