Add weekly notification validity checks

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -113,8 +113,7 @@
     <string name="today">Hoje</string>
 
     <string name="weekly_notification">Notificação semanal</string>
-
-    <string name="weeklyUpdate">Esta semana: </string>
+    <string name="weeklyUpdate">Esta semana</string>
     <string name="and">e</string>
     <string name="addFavoutiresForWeeklyNotification">Adicione favoritos para receber uma atualização semanal. Também pode desabilitar esta notificação nas Configurações.</string>
 </resources>
